changed colors, added glow effect, fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,14 @@ body {
     font-family: 'Times New Roman', Times, serif, sans-serif;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: #111;
   }
 
   .header {
     display: flex;
     justify-content: center;
     padding: 16px;
-    background-color: #eee;
+    background-color: #242926;
   }
 
 .Scoreboard{
@@ -20,15 +20,19 @@ body {
     justify-content: center;
     margin: auto;
     align-items: center;
-    font-size: 30px;
+    font-size: 50px;
     margin-bottom: 0;
     padding-bottom: 0;
+    color: #3E4642;
+    width: 600px;
+    text-align: center;
 }
 
 .scoreMsg{
     display: flex;
     margin: auto;
     margin-top: 0;
+    color: wheat;
 }
 
 .scoreBox {
@@ -37,6 +41,8 @@ body {
     gap: 100px;
     font-size: 80px;
     margin-bottom: 0;
+    margin-top: 0;
+    color: wheat;
 }
 .playerSelection{
     display: flex;
@@ -53,9 +59,15 @@ button {
     text-align: center;
     margin-bottom: 50px;
     border: none;
-    background-color: white;
+    background-color: #111;
 }
 
 button:hover {
     font-size: 80px;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fffb00, 0 0 20px #fffb00,0 0 25px #fffb00;
+}
+
+button:active {
+    font-size: 70px;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #db4f1c, 0 0 20px #db4f1c,0 0 25px #db4f1c;
 }
